plugins {
    id 'java'
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"
javadoc.options.encoding = 'UTF-8'
tasks.withType(Test) {
    systemProperty "file.encoding", "UTF-8"
}

dependencies {
    implementation 'androidx.annotation:annotation:1.1.0'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'net.moznion:uribuilder-tiny:2.7.1'

    testImplementation 'junit:junit:4.13.1'
    testImplementation 'com.google.truth:truth:1.1'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
}